--- a/jquery/index.html
+++ b/jquery/index.html
@@ -88,8 +88,8 @@
                         },
                     "range":
                         {
-                            "min": 0, // minimum amount of + or - change in products sold
-                            "max": 4, // maximum amount of additional + or - change in  products sold
+                            "min": 0, // minimum amount of change in products sold
+                            "max": 4, // maximum amount of additional change in  products sold
                         },
                     "interval":
                         {
