--- a/js/index.html
+++ b/js/index.html
@@ -69,8 +69,8 @@
     * - All ranges are bound to an additional value more than the minimum.
     * - All additional values are dynamically random integers between min and (min + max)
     *
-    * - "start" values represent a count
-    * - "range" and "interval" values represent milliseconds
+    * - "start" and "range" values represent a count
+    * - "interval" values represent milliseconds
     *
     * */
     /*
